# vscodecppcmake

./: CMakeLists.txt  launch.json
apps/: CMakeLists.txt  main.cpp
modelA/: CMakeLists.txt
modelA/include/: modelA.h
modelA/src/: modelA.cpp
tests/: CMakeLists.txt  hellotests.cpp  unittests.cpp
